Add sample for tiles making

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ README.html
 *.pbf
 data/tilegeojson/uk_owners.geojson
 data/tilegeojson/landowners/metadata.json
+data/tilegeojson/uk_owners_sample.geojson
+data/tilegeojson/landowners_low/metadata.json
