--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ data/tilegeojson/uk_owners.geojson
 README.html
 data/tilegeojson/uk_owners_sample.geojson
 data/tilegeojson/landowners_low/metadata.json
+data/tilegeojson/landowners.mbtiles
+data/tilegeojson/landowners_low.mbtiles
+Rdata.RData
