--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ data/tilegeojson/landowners_low/metadata.json
 data/tilegeojson/landowners.mbtiles
 data/tilegeojson/landowners_low.mbtiles
 Rdata.RData
+data/tilegeojson/landowners_low.pmtiles
